# guiscrcpy

./: pyproject.toml
