[tool.poetry]
name = "guiscrcpy"
version = "4.11.0"
description = "A simple, pluggable, graphical user interface for the fastest Android screen mirroring software"
authors = ["Srevin Saju <srevinsaju@sugarlabs.org>"]
license = "GPLv3"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/srevinsaju/guiscrcpy/issues"


[tool.poetry.dependencies]
python = "^3.7"
psutil = "^5.8.0"
pynput = "1.6.8"
colorama = "^0.4.4"
click = "^8.0.1"
QtPy = "^1.9.0"
PyQt5 = {version = "^5.15.4", optional = true}

[tool.poetry.dev-dependencies]
black = "^21.7b0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
